force-app/main/default/objects/Checklist_de_Documentos__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Checklist de Documentos</relationshipLabel>
    <relationshipName>Checklist_de_Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>