force-app/main/default/objects/Checklist_de_Documentos__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Checklist de Documentos</relationshipLabel>
    <relationshipName>Checklist_de_Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>